@@ -5,6 +5,8 @@ require 'spec/expectations/should'
 require 'spec/expectations/message_builder'
 require 'spec/expectations/equality'
 require 'spec/expectations/numeric'
+require 'spec/expectations/collections'
+require 'spec/expectations/handler'
 
 module Spec
   # See Spec::Expectations::ObjectExpectations for expectations that
