@@ -17,65 +17,65 @@ module Spec
       def not_eql(other)
         NotEql.new(other)
       end
-    end
     
-    class Equal #:nodoc:
-      def initialize(expected)
-        @expected = expected
-      end
+      class Equal #:nodoc:
+        def initialize(expected)
+          @expected = expected
+        end
       
-      def met_by?(actual)
-        @actual = actual
-        @actual.equal?(@expected)
+        def met_by?(actual)
+          @actual = actual
+          @actual.equal?(@expected)
+        end
+
+        def failure_message
+          "expected #{@actual.inspect} to equal #{@expected.inspect} (using .equal?)"
+        end
       end
 
-      def failure_message
-        "expected #{@actual.inspect} to equal #{@expected.inspect} (using .equal?)"
-      end
-    end
-
-    class Eql #:nodoc:
-      def initialize(expected)
-        @expected = expected
-      end
+      class Eql #:nodoc:
+        def initialize(expected)
+          @expected = expected
+        end
       
-      def met_by?(actual)
-        @actual = actual
-        @actual.eql?(@expected)
+        def met_by?(actual)
+          @actual = actual
+          @actual.eql?(@expected)
+        end
+
+        def failure_message
+          "expected #{@actual.inspect} to equal #{@expected.inspect} (using .eql?)"
+        end
       end
 
-      def failure_message
-        "expected #{@actual.inspect} to equal #{@expected.inspect} (using .eql?)"
-      end
-    end
-
-    class NotEqual #:nodoc:
-      def initialize(expected)
-        @expected = expected
-      end
+      class NotEqual #:nodoc:
+        def initialize(expected)
+          @expected = expected
+        end
       
-      def met_by?(actual)
-        @actual = actual
-        !@actual.equal?(@expected)
+        def met_by?(actual)
+          @actual = actual
+          !@actual.equal?(@expected)
+        end
+
+        def failure_message
+          "expected #{@actual.inspect} to not equal #{@expected.inspect} (using .equal?)"
+        end
       end
 
-      def failure_message
-        "expected #{@actual.inspect} to not equal #{@expected.inspect} (using .equal?)"
-      end
-    end
-
-    class NotEql #:nodoc:
-      def initialize(expected)
-        @expected = expected
-      end
+      class NotEql #:nodoc:
+        def initialize(expected)
+          @expected = expected
+        end
       
-      def met_by?(actual)
-        @actual = actual
-        !@actual.eql?(@expected)
-      end
+        def met_by?(actual)
+          @actual = actual
+          !@actual.eql?(@expected)
+        end
 
-      def failure_message
-        "expected #{@actual.inspect} to not equal #{@expected.inspect} (using .eql?)"
+        def failure_message
+          "expected #{@actual.inspect} to not equal #{@expected.inspect} (using .eql?)"
+        end
       end
     end
 
